name:                ns-logger
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/dp-cylme/ns-logger#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NSLogger
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , fast-logger
                     , time
                     , transformers
