name:                ns-logger
version:             0.3.0.0
synopsis:            Use fast-logger for log in NS format
description:         Please see README.md
homepage:            http://github.com/dp-cylme/ns-logger#readme
license:             MIT
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           2016 Danil Petrov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NSLogger
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , logging-effect
                     , time
                     , transformers
